--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=9866190361022076d949d7eb5bb9deaa
+APP_ENV=YOUR_APP_ENV
+APP_SECRET=YOUR_APP_SECRET
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -24,7 +24,7 @@ APP_SECRET=9866190361022076d949d7eb5bb9deaa
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
