--- a/.helm/templates/hpa.yaml
+++ b/.helm/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "portfolio.fullname" . }}
+  name: {{ include "concerto.fullname" . }}
   labels:
-    {{- include "portfolio.labels" . | nindent 4 }}
+    {{- include "concerto.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "portfolio.fullname" . }}
+    name: {{ include "concerto.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
