--- a/.helm/templates/serviceaccount.yaml
+++ b/.helm/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "portfolio.serviceAccountName" . }}
+  name: {{ include "concerto.serviceAccountName" . }}
   labels:
-    {{- include "portfolio.labels" . | nindent 4 }}
+    {{- include "concerto.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
