--- a/.helm/templates/tests/test-connection.yaml
+++ b/.helm/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "portfolio.fullname" . }}-test-connection"
+  name: "{{ include "concerto.fullname" . }}-test-connection"
   labels:
-    {{- include "portfolio.labels" . | nindent 4 }}
+    {{- include "concerto.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "portfolio.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "concerto.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
